team: fix mobile spacing

--- a/app/team/team.module.css
+++ b/app/team/team.module.css
@@ -3,7 +3,7 @@
   min-height: 100svh;
   color: rgb(255, 255, 255);
 
-  padding: calc(3rem + var(--navbar-height)) 10rem 0rem 10rem;
+  padding: calc(3rem + var(--navbar-height)) 7% 0rem 7%;
 }
 
 .page h2 {
@@ -13,9 +13,7 @@
 }
 
 .content {
-  /* padding: 2em 3em; */
   margin: auto;
-  /* max-width: 1200px; */
   font-size: 1.4rem;
 }
 
@@ -33,12 +31,20 @@
   gap: 2em;
 }
 
+@media (max-aspect-ratio: 1/1) {
+  .description {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+}
+
 .description p {
-  max-width: 60%;
+  /* max-width: 600px; */
 }
 
 .group_photo {
-  max-width: 40%;
+  width: 100%;
+  max-width: 650px;
   height: auto;
   border-radius: 8px;
   margin-right: 20px;
